Reorganize forex data into HTML/JPEG subdirectories and update templates

--- a/data/forex_data/HTML/forex_2026-01-04.html
+++ b/data/forex_data/HTML/forex_2026-01-04.html
@@ -171,6 +171,11 @@
             color: #ef4444;
             fill: #ef4444;
         }
+
+        .arrow-neutral {
+            color: #ffffff;
+            fill: #ffffff;
+        }
         .currency-unit {
             font-size: 12px;
             font-weight: 700;
@@ -236,11 +241,11 @@
                 </div>
                 <div class="table-cell">
                     <div class="currency-code">105.060</div>
-                    
+                    <div class="currency-arrow arrow-neutral"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><line x1="7" y1="12" x2="17" y2="12" stroke="currentColor" stroke-width="3"/></svg></div>
                 </div>
                 <div class="table-cell">
                     <div class="currency-code">4.682</div>
-                    
+                    <div class="currency-arrow arrow-neutral"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><line x1="7" y1="12" x2="17" y2="12" stroke="currentColor" stroke-width="3"/></svg></div>
                 </div>
                 <div class="table-cell">
                     <div class="currency-code">0.861</div>
