Update templates, collectors, and add historical commodity data files

--- a/data/commodities_data/HTML/commodity_2026-01-16.html
+++ b/data/commodities_data/HTML/commodity_2026-01-16.html
@@ -233,24 +233,24 @@
             <div class="table-grid">
                 <!-- First row: Commodity rates -->
                 <div class="table-cell">
-                    <div class="commodity-code">4,611.94</div>
+                    <div class="commodity-code">4,662.07</div>
                     <div class="commodity-arrow arrow-down"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10L12 15L17 10H7Z" fill="currentColor"/></svg></div>
                 </div>
                 <div class="table-cell">
-                    <div class="commodity-code">6,867.19</div>
+                    <div class="commodity-code">19,212.10</div>
                     <div class="commodity-arrow arrow-up"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7 14L12 9L17 14H7Z" fill="currentColor"/></svg></div>
                 </div>
                 <div class="table-cell">
-                    <div class="commodity-code">4,677.61</div>
+                    <div class="commodity-code">6,815.78</div>
                     <div class="commodity-arrow arrow-down"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10L12 15L17 10H7Z" fill="currentColor"/></svg></div>
                 </div>
                 <div class="table-cell">
-                    <div class="commodity-code">64.18</div>
+                    <div class="commodity-code">131.07</div>
                     <div class="commodity-arrow arrow-down"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10L12 15L17 10H7Z" fill="currentColor"/></svg></div>
                 </div>
                 <div class="table-cell">
-                    <div class="commodity-code">28,171.64</div>
-                    <div class="commodity-arrow arrow-up"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7 14L12 9L17 14H7Z" fill="currentColor"/></svg></div>
+                    <div class="commodity-code">26,385.94</div>
+                    <div class="commodity-arrow arrow-down"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10L12 15L17 10H7Z" fill="currentColor"/></svg></div>
                 </div>
                 
                 <!-- Second row: Commodity units -->
